<resources>
    <string name="app_name">Maareva</string>
    <string name="login">Login</string>
    <string name="select_role">Select Role</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_apmc">Select APMC</string>
    <string name="select_commodity">Select Commodity</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_select_role_alert_msg">Please Select Role!</string>
    <string name="please_select_apmc_alert_msg">Please Select APMC!</string>
    <string name="please_select_commodity_alert_msg">Please Select Commodity!</string>
    <string name="sorry_something_went_wrong_alert_msg">Sorry Something Went Wrong!</string>
    <string name="please_enter_phone_no">Please Enter Phone No.!</string>
    <string name="please_enter_username_alert_msg">Please Enter Username!</string>
    <string name="please_enter_password_alert_msg">Please Enter Password!</string>
    <string name="error_sending_otp">Error Sending OTP</string>
    <string name="invalid_data_of_user_alert_msg">Invalid Data of User!</string>
    <string name="otp_sent_successfully_alert_msg">OTP Sent Successfully!</string>
    <string name="register">Register</string>
    <string name="buyer_registration">User Registration</string>
    <string name="please_try_again_later_alert_msg">Please Try Again Later!</string>
    <string name="invalid_credentials_or_otp_alert_msg">Invalid Credentials or OTP!</string>
    <string name="remember_me">Remember Me</string>
    <string name="please_enter_full_name">Please Enter Full Name!</string>
    <string name="please_enter_email_alert_msg">Please Enter Email!</string>
    <string name="please_enter_address_alert_msg">Please Enter Address!</string>
    <string name="please_enter_otp_alert_msg">Please Enter OTP!</string>
    <string name="this_mobile_is_already_registered_alert_msg">This Mobile is Already Registered!</string>
    <string name="buyer_registered_successfully_alert_msg">Buyer Registered Successfully!</string>
    <string-array name="language">
        <item>English</item>
        <item>ગુજરાતી</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="commodity_name_lbl">Commodity Name</string>
    <string name="total_pcas_lbl">Total PCAs</string>
    <string name="notifications">Notifications</string>
    <string name="add_pca">Add PCA</string>
    <string name="pca_list">PCA List</string>
    <string name="commodity">Commodity</string>
    <string name="auction">Auction</string>
    <string name="pca_auction">PCA Auction</string>
    <string name="date">Date</string>
    <string name="requirement">Requirement</string>
    <string name="remaining_bags">Remaining Bags</string>
    <string name="total_purchased_bags">Total Purchased Bags</string>
    <string name="average_price">Average Price</string>
    <string name="per_20_kgs">Per 20 Kgs</string>
    <string name="buyer_s_lower_limit">Buyer\'s Lower Limit</string>
    <string name="buyer_s_upper_limit">Buyer\'s Upper Limit</string>
    <string name="bori">Bori</string>
    <string name="auction_item_list">Auction Item List</string>
    <string name="select_shop">Select Shop</string>
    <string name="shop_no">Shop No.</string>
    <string name="current_time">Current Time</string>
    <string name="current_price">Current Price</string>
    <string name="upper_limit">Upper Limit</string>
    <string name="lower_limit">Lower Limit</string>
    <string name="save">Save</string>
    <string name="apmc">APMC</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="pca_name">PCA Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="gca_commission">GCA Commission (%)</string>
    <string name="pca_commission">PCA Commission (%)</string>
    <string name="market_cess">Market Cess (%)</string>
    <string name="logout">Logout</string>
    <string name="please_select_valid_apmc_alert_msg">Please Select Valid APMC!</string>
    <string name="please_enter_pca_name_alert_msg">Please Enter PCA Name!</string>
    <string name="please_enter_gca_commission_alert_msg">Please Enter GCA Commission!</string>
    <string name="please_enter_pca_commission_alert_msg">Please Enter PCA Commission!</string>
    <string name="please_enter_market_cess_alert_msg">Please Enter Market Cess!</string>
    <string name="please_enter_valid_phone_no_alert_msg">Please Enter Valid Phone No.!</string>
    <string name="please_enter_email_id_alert_msg">Please Enter Email Id!</string>
    <string name="please_enter_valid_email_id_alert_msg">Please Enter Valid Email Id!</string>
    <string name="pca_created_successfully_alert_msg">PCA Created Successfully!</string>
    <string name="phone_no_already_exist">Phone No. Already Exist</string>
    <string name="phone_no_already_exist_alert_msg">Phone No. Already Exist</string>
    <string name="status">Status</string>
    <string name="approved_pca_list">Approved PCA List</string>
    <string name="unappproved_pca_list">Not Appproved PCA List</string>
    <string name="approved">Approved</string>
    <string name="unapproved">Not Approved</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="total_bags">Total Bags</string>
    <string name="other_commission">Other Commission (₹)</string>
    <string name="left_bags">Left Bags</string>
    <string name="basic_amount">Basic Amount</string>
    <string name="gca_commission_rupee">GCA Commission (₹)</string>
    <string name="pca_commission_rupee">PCA Commission (₹)</string>
    <string name="mc_commission_rupee">MC Commission (₹)</string>
    <string name="total_avg_rate_rupee">Total Avg Rate (₹)</string>
    <string name="buyer_auction">Buyer Auction</string>
    <string name="select_pca">Select PCA</string>
    <string name="bags">Bags</string>
    <string name="lower_limit_rupee">Lower Limit (₹)</string>
    <string name="upper_limit_rupee">Upper Limit (₹)</string>
    <string name="last_day_price_rupee">Last Day Price (₹)</string>
    <string name="amount_rupee">Amount (₹)</string>
    <string name="update">Update</string>
    <string name="is_active">Is Active</string>
    <string name="edit_pca">Edit PCA</string>
    <string name="admin_login">Admin Login</string>
    <string name="location">Location</string>
    <string name="please_enter_location_alert_msg">Please Enter Location!</string>
    <string name="user_approval_is_pending_alert_msg">User Approval is Pending!</string>
    <string name="accept_all_terms_and_conditions">Accept All Terms and Conditions</string>
    <string name="please_accept_terms_and_conditions">Please Accept Terms and Conditions!</string>
    <string name="expense">Expense</string>
    <string name="total_amount">Total Amount</string>
    <string name="market_cess_rupee">Market Cess (₹)</string>
    <string name="transportation_charge_rupee">Transportation Charge (₹)</string>
    <string name="labour_charge_rupee">Labour Charge (₹)</string>
    <string name="submit">Submit</string>
    <string name="auction_inserted_successfully">Auction Inserted Successfully!</string>
    <string name="allocated_bags">Allocated Bags</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_expense">Total Expense</string>
    <string name="expenses">Expenses</string>
    <string name="purchased_bags">Purchased Bags</string>
    <string name="live_auction">Live Auction</string>
    <string name="profile">Profile</string>
    <string name="office_address">Office Address</string>
    <string name="warehouse_factory_address">Warehouse/Factory Address</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="your_message">Your Message</string>
    <string name="agreement">Agreement</string>
    <string name="city">City</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="apmc_lbl">APMC :</string>
    <string name="pan_card_lbl">PAN Card :</string>
    <string name="aadhar_card_lbl">Aadhar Card :</string>
    <string name="gst_no_lbl">GST No. :</string>
    <string name="city_lbl">City :</string>
    <string name="commodity_lbl">Commodity :</string>
    <string name="total_pcas_lbl_new">Total PCAs :</string>
    <string name="allocated_lbl">Allocated</string>
    <string name="bags_lbl">Bags :</string>
    <string name="purchased_lbl">Purchased</string>
    <string name="rate_lbl">Rate :</string>
    <string name="cost_lbl">Cost :</string>
    <string name="avg_rate_lbl">Avg Rate :</string>
    <string name="total_cost_lbl">Total Cost :</string>
    <string name="date_lbl">Date :</string>
    <string name="buyer_previous_auction">Buyer Previous Auction</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="auction_report">Auction Report</string>
    <string name="detail_auction_report">Detail Auction Report</string>
    <string name="pca_previous_auction">PCA Previous Auction</string>
    <string name="limit">Limit</string>
    <string name="budget">Budget</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>
    <string name="otp">OTP</string>
    <string name="shop_name">Shop Name</string>
    <string name="full_name">Full Name</string>
    <string name="no_auction_for_today_contact_your_customer_alert_msg">"No Auction for Today,\nContact your customer "</string>
    <string name="do_you_want_to_logout_alert_msg">Do you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pca_short_name">PCA Short Name</string>
    <string name="pca_gujarati_name">PCA Gujarati Name</string>
    <string name="pca_gujarati_short_name">PCA Gujarati Short Name</string>
    <string name="please_enter_pca_gujarati_name_alert_msg">Please Enter PCA Gujarati Name!</string>
    <string name="select_city">Select City</string>
    <string name="select_language">Select Language</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="do_you_want_to_update_auction_alert_msg">Do you want to update Auction?</string>
    <string name="please_enter_valid_bags_alert_msg">Please Enter Valid Bags!</string>
    <string name="please_enter_valid_input_alert_msg">Please Enter Valid Input!</string>
    <string name="do_you_want_to_delete_pca_data_alert_msg">Do you want to Delete PCA Data?</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="weight_after_auction_in_kg">Weight After Auction in KG</string>
    <string name="kg">Kg</string>
    <string name="invoice">Invoice</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="show_invoice">Show Invoice</string>
    <string name="admin">Admin</string>
    <string name="weight">Weight</string>
    <string name="invoice_detail">Invoice Detail</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="forward">Forward</string>
    <string name="next">Next</string>
    <string name="pre_invoice_generate">Pre Invoice Generate</string>
    <string name="invoice_stock">Invoice Stock</string>
    <string name="stock_details">Stock Details</string>
    <string name="shop_list">Shop List</string>
    <string name="buyer_list">Buyer List</string>
</resources>