<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ind_pca_nav"
    app:startDestination="@id/indPCADashboardFragment">

    <fragment
        android:id="@+id/indPCADashboardFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCADashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_ind_p_c_a_dashboard" >
        <action
            android:id="@+id/action_indPCADashboardFragment_to_indPCAAuctionFragment"
            app:destination="@id/indPCAAuctionFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCADashboardFragment" />
        <action
            android:id="@+id/action_indPCADashboardFragment_to_indPCAAuctionReportFragment"
            app:destination="@id/indPCAAuctionReportFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCADashboardFragment" />
        <action
            android:id="@+id/action_indPCADashboardFragment_to_indPCAInvoiceFragment"
            app:destination="@id/indPCAInvoiceFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCADashboardFragment"/>
        <action
            android:id="@+id/action_indPCADashboardFragment_to_indPCAInvoiceStockFragment"
            app:destination="@id/indPCAInvoiceStockFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCAInvoiceFragment"/>
    </fragment>
    <fragment
        android:id="@+id/indPCAAuctionFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAAuctionFragment"
        android:label="@string/pca_auction"
        tools:layout="@layout/fragment_ind_p_c_a_auction" >
<!--        <action-->
<!--            android:id="@+id/action_indPCAAuctionFragment_to_indPCAAuctionListFragment"-->
<!--            app:destination="@id/indPCAAuctionListFragment"-->
<!--            app:enterAnim="@anim/slide_in_left"-->
<!--            app:exitAnim="@anim/slide_out_right"-->
<!--            app:popEnterAnim="@anim/slide_in_right"-->
<!--            app:popExitAnim="@anim/slide_out_left"-->
<!--            app:popUpTo="@id/indPCAAuctionFragment" />-->
        <action
            android:id="@+id/action_indPCAAuctionFragment_to_indPCAAuctionBuyerListFragment"
            app:destination="@id/indPCAAuctionBuyerListFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCAAuctionFragment"/>
    </fragment>
    <fragment
        android:id="@+id/indPCAAuctionListFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAAuctionListFragment"
        android:label="@string/shop_list"
        tools:layout="@layout/fragment_ind_p_c_a_auction_list">
        <argument
            android:name="buyerModel"
            app:argType="com.bluebellcspl.maarevacommoditytradingapp.model.IndPCABuyerWiseAuctionModel" />
    </fragment>
    <fragment
        android:id="@+id/indPCAAuctionReportFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAAuctionReportFragment"
        android:label="@string/pca_previous_auction"
        tools:layout="@layout/fragment_ind_p_c_a_auction_report">
        <argument
            android:name="selectedDate"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/indPCAAuctionBuyerListFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAAuctionBuyerListFragment"
        tools:layout="@layout/fragment_ind_p_c_a_auction_buyer_list"
        android:label="@string/buyer_list">
        <action
            android:id="@+id/action_indPCAAuctionBuyerListFragment_to_indPCAAuctionListFragment"
            app:destination="@id/indPCAAuctionListFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCAAuctionBuyerListFragment" />
    </fragment>
    <fragment
        android:id="@+id/indPCAInvoiceFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAInvoiceFragment"
        android:label="@string/invoice"
        tools:layout="@layout/fragment_ind_p_c_a_invoice" >
        <action
            android:id="@+id/action_indPCAInvoiceFragment_to_indPCAInvoiceStockFragment"
            app:destination="@id/indPCAInvoiceStockFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/indPCAInvoiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/indPCAInvoiceStockFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAInvoiceStockFragment"
        android:label="@string/invoice_stock"
        tools:layout="@layout/fragment_ind_p_c_a_invoice_stock">
        <action
            android:id="@+id/action_indPCAInvoiceStockFragment_to_indPCAInvoiceStockDetailFragment"
            app:destination="@id/indPCAInvoiceStockDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/indPCAInvoiceStockDetailFragment"
        android:name="com.bluebellcspl.maarevacommoditytradingapp.fragment.IndividualPca.IndPCAInvoiceStockDetailFragment"
        android:label="@string/stock_details"
        tools:layout="@layout/fragment_ind_p_c_a_invoice_stock_detail">
        <argument
            android:name="buyerStockModel"
            app:argType="com.bluebellcspl.maarevacommoditytradingapp.model.IndPCAStockBuyerWiseModelItem" />
    </fragment>
</navigation>