<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.pca.PCAPreviousAuctionFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_PreviousAuction_PCAPrevAuctionFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:cardBackgroundColor="@color/newDSCardColor"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tv_PreviousAuctionDate_PCAPrevAuctionFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/date_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_PreviousAuctionPurchasedBags_PCAPrevAuctionFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/bags_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_PreviousAuctionAvgRate_PCAPrevAuctionFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/avg_rate_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_PreviousAuctionTotalCost_PCAPrevAuctionFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/total_cost_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/DividerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_PreviousAuction_PCAPrevAuctionFragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/rc_View_PCAPrevAuctionFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_450sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/DividerView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>